name:		        GLX
version:	        0.1.1
license:	        MIT
license-file:	        LICENSE
copyright:	        Aren Olson, 2011
maintainer:	        Aren Olson <reacocard@gmail.com>
homepage:               https://github.com/reacocard/glx
category:	        Graphics
synopsis:	        A binding to GLX
build-type:             Simple
cabal-version:          >= 1.4

Library
    exposed-modules:
        Graphics.X11.GLX,
        Graphics.X11.GLX.Extensions
    extensions:	        ForeignFunctionInterface, CPP
    extra-libraries:    "GL"
    build-depends:	base >= 3 && < 5, X11, OpenGLRaw
    ghc-options:        -funbox-strict-fields -Wall -fno-warn-unused-binds
    ghc-prof-options:   -prof -auto-all
